file-log/svc-depl.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: file-log-echo
  name: file-log-echo
spec:
  ports:
  - port: 8080
    name: high
    protocol: TCP
    targetPort: 8080
  - port: 90
    name: low
    protocol: TCP
    targetPort: 8080
  selector:
    app: file-log-echo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: file-log-echo
  name: file-log-echo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: file-log-echo
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: file-log-echo
    spec:
      containers:
      - image: gcr.io/kubernetes-e2e-test-images/echoserver:2.2
        name: file-log-echo
        ports:
        - containerPort: 8080
        resources: {}
